--- a/templates/adminpanel/index.html.twig
+++ b/templates/adminpanel/index.html.twig
@@ -14,16 +14,17 @@
                                 <h2 class="text-uppercase text-center mb-5">Admin Panel</h2>
                                 <div class="container">
                                     <div class="row">
+
                                         <div class="col-sm">
-                                            <a href="/listclient"  class="btn btn-info"> Manage Client</a>
+                                            <a href="/adminpanel/listclient"  class="btn btn-info"> Manage Client</a>
 
                                         </div>
                                         <div class="col-sm">
-                                            <a href="/listcoach"  class="btn btn-success"> Manage Coach</a>
+                                            <a href="/adminpanel/listcoach"  class="btn btn-success"> Manage Coach</a>
 
                                         </div>
                                         <div class="col-sm">
-                                            <a href="/listnutri" class="btn btn-dark"> Manage Nutristionist</a>
+                                            <a href="/adminpanel/listnutri" class="btn btn-dark"> Manage Nutristionist</a>
 
                                         </div>
                                 </div>
