--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,22 @@
 
 {% block body %}
     <!-- end:fh5co-hero -->
+    <div class="fh5co-hero">
+        <div class="fh5co-overlay"></div>
+        <div class="fh5co-cover" data-stellar-background-ratio="0.5" style="background-image: url(images/home-image.jpg);">
+            <div class="desc animate-box">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <h2>Fitness &amp; Health <br>is a <b>Mentality</b></h2>
+                            {#                                        <p><span>Created with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" class="fh5co-site-name">FreeHTML5.co</a></span></p>#}
+                            <span><a class="btn btn-primary" href="/signupin">Start Your Journey</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="fh5co-schedule-section" class="fh5co-lightgray-section">
         <div class="container">
             <div class="row">
