--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Log in!{% endblock %}
 
 {% block body %}
     <div class="card">
@@ -14,22 +14,33 @@
             <!-- /Logo -->
             <h4 class="mb-2">Welcome to Sahti! 👋</h4>
             <p class="mb-4">Please sign-in to your account and start the adventure</p>
-
-            <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+            {% if error %}
+                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
+            <div class="text-danger">
+                {% if error %}
+                    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
+            </div>
+            {#            {% if app.user %}#}
+            {#                {{ app.user.username }}#}
+            {#            {% endif %}#}
+            <form id="formAuthentication" class="mb-3" method="post">
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email or Username</label>
+                    <label for="inputEmail" class="form-label">Email </label>
                     <input
-                            type="text"
+                            type="email"
                             class="form-control"
-                            id="email"
-                            name="email-username"
-                            placeholder="Enter your email or username"
-                            autofocus
+                            name="email"
+                            id="inputEmail"
+                            placeholder="Enter your email"
+                            value="{{ last_username }}"
+                            autocomplete="email" required autofocus
                     />
                 </div>
                 <div class="mb-3 form-password-toggle">
                     <div class="d-flex justify-content-between">
-                        <label class="form-label" for="password">Password</label>
+                        <label class="form-label" for="inputPassword">Password</label>
                         <a href="/resetpwd">
                             <small>Forgot Password?</small>
                         </a>
@@ -37,14 +48,18 @@
                     <div class="input-group input-group-merge">
                         <input
                                 type="password"
-                                id="password"
+                                id="inputPassword"
                                 class="form-control"
                                 name="password"
                                 placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
                                 aria-describedby="password"
+                                autocomplete="current-password" required
                         />
                         <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
                     </div>
+                    <input type="hidden" name="_csrf_token"
+                           value="{{ csrf_token('authenticate') }}"
+                    >
                 </div>
                 <div class="mb-3">
                     <div class="form-check">
@@ -52,6 +67,8 @@
                         <label class="form-check-label" for="remember-me"> Remember Me </label>
                     </div>
                 </div>
+
+
                 <div class="mb-3">
                     <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
                 </div>
@@ -65,4 +82,5 @@
             </p>
         </div>
     </div>
+
 {% endblock %}
