--- a/templates/signupin/index.html.twig
+++ b/templates/signupin/index.html.twig
@@ -14,8 +14,11 @@
                 </a>
             </div>
             <!-- /Logo -->
+            <div class="text-center">
+
             <h4 class="mb-2">Adventure starts here 🚀</h4>
-            <p class="mb-4">Make your app management easy and fun!</p>
+            <p class="mb-4">Let’s Be FunFit !</p>
+            </div>
             <div class="row " style="margin-bottom: 6px">
 
                 <a href="/registreclient" class="btn btn-secondary btn-rounded">
