--- a/templates/adminpanel/listclient.html.twig
+++ b/templates/adminpanel/listclient.html.twig
@@ -10,9 +10,9 @@
                 <a class="navbar-brand" href="/adminpanel">Admin Panel</a>
                 <div class="collapse navbar-collapse" id="navbar-ex-2">
                     <div class="navbar-nav me-auto">
-                        <a class="nav-item nav-link active" href="/listclient">Manage Client</a>
-                        <a class="nav-item nav-link" href="/listcoach">Manage Coach</a>
-                        <a class="nav-item nav-link" href="/listnutri">Manage Nutritionist</a>
+                        <a class="nav-item nav-link active" href="/adminpanel/listclient">Manage Client</a>
+                        <a class="nav-item nav-link" href="/adminpanel/listcoach">Manage Coach</a>
+                        <a class="nav-item nav-link" href="/adminpanel/listnutri">Manage Nutritionist</a>
                     </div>
 
                     <span class="navbar-text"></span>
@@ -20,6 +20,12 @@
             </div>
         </nav>
         <h5 class="card-header">Client's list</h5>
+    <div>
+        <h6>Filter with status :</h6>
+        <a href="{{ path ('searchactive') }}" class="btn btn-outline-success"/> Active client only</a>
+        <a href="{{ path ('searchblocked') }}" class="btn btn-outline-danger"/> Blocked client only</a>
+        <a href="{{ path ('listclient') }}" class="btn btn-outline-info"/> Refresh</a>
+    </div>
         <div class="table-responsive text-nowrap">
             <table class="table">
                 <thead>
@@ -32,8 +38,10 @@
                     <th>Actions</th>
                 </tr>
                 </thead>
-                <tbody class="table-border-bottom-0">
-                <tr {% for i in listeC %} >
+                <tbody class="table-border-bottom-0" id="tableclient" >
+
+                {% for i in donneeE %}
+                <tr>
 
                     <td>{{ i.prenom }}</td>
                     <td>{{ i.nom }}</td>
@@ -54,9 +62,26 @@
                             <a href="{{ path ('unblockclient',{'id' :i.id}) }}" class="btn btn-outline-warning" onclick="return confirm('Are you sure you want to unblock this client?')"/> Unblock</a>
 
                         </td>
-                </tr {% endfor %} >
+                </tr >
+                {% else %}
+                    <tr>
+                        <td colspan="5">no records found</td>
+                    </tr>
+                {% endfor %}
+
                 </tbody>
+
+                <form class="w_search">
+                    <div class="sidebar-search">
+                        <div class="input-group custom-search-form">
+                            <input type="text" id="searchsearch" name="searchsearch" class="form-control" placeholder="Search">
+                        </div>
+                    </div>
+                </form>
+
             </table>
+            {{ knp_pagination_render(donneeE) }}
+
         </div>
     </div>
 {% endblock %}
