--- a/templates/adminpanel/listcoach.html.twig
+++ b/templates/adminpanel/listcoach.html.twig
@@ -10,9 +10,9 @@
                 <a class="navbar-brand" href="/adminpanel">Admin Panel</a>
                 <div class="collapse navbar-collapse" id="navbar-ex-2">
                     <div class="navbar-nav me-auto">
-                        <a class="nav-item nav-link " href="/listclient">Manage Client</a>
-                        <a class="nav-item nav-link active" href="/listcoach">Manage Coach</a>
-                        <a class="nav-item nav-link" href="/listnutri">Manage Nutritionist</a>
+                        <a class="nav-item nav-link " href="/adminpanel/listclient">Manage Client</a>
+                        <a class="nav-item nav-link active" href="/adminpanel/listcoach">Manage Coach</a>
+                        <a class="nav-item nav-link" href="/adminpanel/listnutri">Manage Nutritionist</a>
                     </div>
 
                     <span class="navbar-text"></span>
@@ -20,6 +20,12 @@
             </div>
         </nav>
         <h5 class="card-header">Coach's list</h5>
+            <div>
+                <h6>Filter with status :</h6>
+                <a href="{{ path ('searchcoach') }}" class="btn btn-outline-success"/> Active coach only</a>
+                <a href="{{ path ('searchblockedcoach') }}" class="btn btn-outline-danger"/> Blocked coach only</a>
+                <a href="{{ path ('listcoach') }}" class="btn btn-outline-info"/> Refresh</a>
+            </div>
         <div class="table-responsive text-nowrap">
             <table class="table">
                 <thead>
@@ -33,8 +39,9 @@
                     <th>Actions</th>
                 </tr>
                 </thead>
-                <tbody class="table-border-bottom-0">
-                <tr {% for i in listeE %} >
+                <tbody class="table-border-bottom-0" id="tablecoach1">
+                {% for i in donneeC %}
+                <tr>
 
                     <td>{{ i.prenom }}</td>
                     <td>{{ i.nom }}</td>
@@ -56,9 +63,22 @@
                         <a href="{{ path ('unblockcoach',{'id' :i.id}) }}" class="btn btn-outline-warning" onclick="return confirm('Are you sure you want to unblock this client?')"/> Unblock</a>
 
                     </td>
-                </tr {% endfor %} >
+                </tr >
+                {% else %}
+                    <tr>
+                        <td colspan="5">no records found</td>
+                    </tr>
+                {% endfor %}
                 </tbody>
+                <form class="w_search">
+                    <div class="sidebar-search">
+                        <div class="input-group custom-search-form">
+                            <input type="text" id="searchsearch1" name="searchsearch" class="form-control" placeholder="Search">
+                        </div>
+                    </div>
+                </form>
             </table>
+                {{ knp_pagination_render(donneeC) }}
         </div>
     </div>
 {% endblock %}
