--- a/templates/base-back.html.twig
+++ b/templates/base-back.html.twig
@@ -436,41 +436,18 @@
                             </div>
 
                             <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
-                                <!-- Search -->
-{#                                <div class="navbar-nav align-items-center">#}
-{#                                    <div class="nav-item d-flex align-items-center">#}
-{#                                        <i class="bx bx-search fs-4 lh-0"></i>#}
-{#                                        <input#}
-{#                                                type="text"#}
-{#                                                class="form-control border-0 shadow-none"#}
-{#                                                placeholder="Search..."#}
-{#                                                aria-label="Search..."#}
-{#                                        />#}
-{#                                    </div>#}
-{#                                </div>#}
-                                <!-- /Search -->
 
                                 <ul class="navbar-nav flex-row align-items-center ms-auto">
-                                    <!-- Place this tag where you want the button to render. -->
-{#                                    <li class="nav-item lh-1 me-3">#}
-{#                                        <a#}
-{#                                                class="github-button"#}
-{#                                                href="https://github.com/themeselection/sneat-html-admin-template-free"#}
-{#                                                data-icon="octicon-star"#}
-{#                                                data-size="large"#}
-{#                                                data-show-count="true"#}
-{#                                                aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"#}
-{#                                        >Star</a#}
-{#                                        >#}
-{#                                    </li>#}
 
                                     <!-- User -->
                                     <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                         <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
                                             <div class="avatar avatar-online">
                                                 {% if app.user %}
-
-{#                                                <img  src="{{ asset('uploads/' ~  client.img ) }}"  alt class="w-px-40 h-auto rounded-circle" />#}
+                                                <img  src="{{ asset('uploads/' ~   app.user.salt ) }}"  alt class="w-px-40 h-auto rounded-circle" />
+                                                {% endif %}
+                                                {% if is_granted('ROLE_ADMIN') %}
+                                                    <img  src="{{ asset('images/SAHTI Logo with BG.png') }}"  alt class="w-px-40 h-auto rounded-circle" />
                                                 {% endif %}
 
                                             </div>
@@ -482,7 +459,10 @@
                                                         <div class="flex-shrink-0 me-3">
                                                             <div class="avatar avatar-online">
                                                                 {% if app.user %}
-{#                                                                <img src="{{ asset('uploads/' ~  client.img ) }}" alt class="w-px-40 h-auto rounded-circle" />#}
+                                                                    <img  src="{{ asset('uploads/' ~   app.user.salt ) }}"  alt class="w-px-40 h-auto rounded-circle" />
+                                                                {% endif %}
+                                                                {% if is_granted('ROLE_ADMIN') %}
+                                                                    <img  src="{{ asset('images/SAHTI Logo with BG.png') }}"  alt class="w-px-40 h-auto rounded-circle" />
                                                                 {% endif %}
                                                             </div>
                                                         </div>
@@ -490,7 +470,7 @@
                                                             {% if app.user %}
 
                                                             <span class="fw-semibold d-block">{{ app.user.username }}</span>
-                                                            <small class="text-muted"></small>
+                                                                <small class="text-muted"></small>
                                                             {% endif %}
 
                                                         </div>
@@ -501,28 +481,29 @@
                                                 <div class="dropdown-divider"></div>
                                             </li>
                                             <li>
-                                                {% if app.user %}
-                                                <a class="dropdown-item" href="/profile">
-                                                    <i class="bx bx-user me-2"></i>
-                                                    <span class="align-middle">My Profile</span>
-                                                </a>
+                                                {% if is_granted('ROLE_ADMIN') %}
                                                 {% endif %}
+                                                {% if is_granted('ROLE_USER') %}
+                                                    <a class="dropdown-item" href="/profile">
+                                                        <i class="bx bx-user me-2"></i>
+                                                        <span class="align-middle">My Profile</span>
+                                                    </a>
+                                                {% endif %}
+                                                {% if is_granted('ROLE_COACH') %}
+                                                    <a class="dropdown-item" href="/profileE">
+                                                        <i class="bx bx-user me-2"></i>
+                                                        <span class="align-middle">My Profile</span>
+                                                    </a>
+                                                {% endif %}
+                                                {% if is_granted('ROLE_NUTRI') %}
+                                                    <a class="dropdown-item" href="/profileN">
+                                                        <i class="bx bx-user me-2"></i>
+                                                        <span class="align-middle">My Profile</span>
+                                                    </a>
+                                                {% endif %}
+
                                             </li>
-{#                                            <li>#}
-{#                                                <a class="dropdown-item" href="#">#}
-{#                                                    <i class="bx bx-cog me-2"></i>#}
-{#                                                    <span class="align-middle">Settings</span>#}
-{#                                                </a>#}
-{#                                            </li>#}
-{#                                            <li>#}
-{#                                                <a class="dropdown-item" href="#">#}
-{#                                    <span class="d-flex align-items-center align-middle">#}
-{#                                      <i class="flex-shrink-0 bx bx-credit-card me-2"></i>#}
-{#                                      <span class="flex-grow-1 align-middle">Billing</span>#}
-{#                                      <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>#}
-{#                                    </span>#}
-{#                                                </a>#}
-{#                                            </li>#}
+
                                             <li>
                                                 <div class="dropdown-divider"></div>
                                             </li>
